--- a/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
+++ b/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TriviaXamarinApp.Views.MainPage">
-    
-        <StackLayout BackgroundColor="LightSlateGray">
+    <ContentPage.Content>
+        <StackLayout BackgroundColor="LightSlateGray" x:Name="MainPageStack">
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
             <Label Text="Hello Player" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
@@ -15,5 +15,5 @@
         <Button Text="Sign Up"  Clicked="SignUpButton" FontSize="25" TextColor="White" Padding="20" Margin="00, 50, 0, 50"/>
 
     </StackLayout>
-    
+    </ContentPage.Content>
 </ContentPage>
