--- a/TriviaXamarinApp/TriviaXamarinApp/Views/Game.xaml
+++ b/TriviaXamarinApp/TriviaXamarinApp/Views/Game.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TriviaXamarinApp.Views.Game">
+             x:Class="TriviaXamarinApp.Views.Game" 
+             x:Name="QuestionPageName">
     <ContentPage.Content>
-        <StackLayout x:Name="questionStack">
+        <StackLayout>
 
+            <!--<Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.DTP.CurrentUser.NickName}" FontSize="18" TextDecorations="Underline"/>
+            <Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.Score}" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start" TextColor="GreenYellow"/>-->
             <Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.DTP.CurrentUser.NickName}" FontSize="18" TextDecorations="Underline"/>
             <Label Text="{Binding Score}" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start" TextColor="GreenYellow"/>
+            
 
             <Label Text ="{Binding QuestionText}" VerticalOptions="Fill" HorizontalOptions="Center" FontSize="18" TextDecorations="Underline" TextColor="{Binding QuestionColor}"/>
             <Label Text ="{Binding QuestionWriter}" VerticalOptions="Fill" HorizontalOptions="Start" FontFamily="David" FontSize="16" FontAttributes="Bold" TextDecorations="Underline"/>
