--- a/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
+++ b/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
@@ -7,12 +7,23 @@
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
             <Label Text="Hello Player" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome To The Trivia Game" HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
-        </Frame>
-
-        <Button Text="Log In" Clicked="LogInButton" FontSize="25" TextColor="White" Padding="20" Margin="00, 150, 0, 50"/>
-        <Button Text="Sign Up"  Clicked="SignUpButton" FontSize="25" TextColor="White" Padding="20" Margin="00, 50, 0, 50"/>
+            <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
+                <Label Text="Welcome To The Trivia Game" HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
+            </Frame>
+            <Grid HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    
+                </Grid.RowDefinitions>
+                <Button Grid.Row="0" Text="Log In" Clicked="LogInButton" FontSize="25" TextColor="White" Padding="20" Margin="20"/>
+                <Button Grid.Row="1" Text="Play Game"  Clicked="PlayGame" FontSize="25" TextColor="White" Padding="20" Margin="20" BorderColor="#000000"/>
+                <Button Grid.Row="2" Text="Sign Up"  Clicked="SignUpButton" FontSize="25" TextColor="White" Padding="20" Margin="20"/>
+            </Grid>
+            
+            
+        
 
     </StackLayout>
     </ContentPage.Content>
