--- a/TriviaXamarinApp/TriviaXamarinApp/Views/Game.xaml
+++ b/TriviaXamarinApp/TriviaXamarinApp/Views/Game.xaml
@@ -6,14 +6,12 @@
     <ContentPage.Content>
         <StackLayout>
 
-            <!--<Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.DTP.CurrentUser.NickName}" FontSize="18" TextDecorations="Underline"/>
-            <Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.Score}" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start" TextColor="GreenYellow"/>-->
-            <Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.DTP.CurrentUser.NickName}" FontSize="18" TextDecorations="Underline"/>
-            <Label Text="{Binding Score}" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start" TextColor="GreenYellow"/>
-            
+
+            <Label Text="{Binding Source={x:Reference QuestionPageName}, Path=BindingContext.DTP.currentUser.NickName}" FontSize="18" TextDecorations="Underline"/>
+            <Label Text="{Binding Points}" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start" TextColor="GreenYellow"/>
 
             <Label Text ="{Binding QuestionText}" VerticalOptions="Fill" HorizontalOptions="Center" FontSize="18" TextDecorations="Underline" TextColor="{Binding QuestionColor}"/>
-            <Label Text ="{Binding QuestionWriter}" VerticalOptions="Fill" HorizontalOptions="Start" FontFamily="David" FontSize="16" FontAttributes="Bold" TextDecorations="Underline"/>
+            <Label Text ="{Binding QuestionAuthor}" VerticalOptions="Fill" HorizontalOptions="Start" FontFamily="David" FontSize="16" FontAttributes="Bold" TextDecorations="Underline"/>
 
             <CollectionView ItemsSource="{Binding AnswersCollection}">
                 <CollectionView.ItemTemplate>
@@ -25,8 +23,7 @@
 
 
             <Button Text="New Question" BackgroundColor="LawnGreen" Command="{Binding NextQuestionCommand}" WidthRequest="100"/>
-            <Button Text="Add Question" BackgroundColor="{Binding AddQuestionColor}" Command="{Binding AddQuestionCommand}" WidthRequest="100"/>
-
+            <Button Text="Add Question" BackgroundColor="{Binding AddQuesColor}" Command="{Binding AddQuestionCommand}" WidthRequest="100"/>
 
         </StackLayout>
     </ContentPage.Content>
