--- a/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
+++ b/TriviaXamarinApp/TriviaXamarinApp/Views/MainPage.xaml
@@ -18,8 +18,8 @@
                     
                 </Grid.RowDefinitions>
                 <Button Grid.Row="0" Text="Log In" Clicked="LogInButton" FontSize="25" TextColor="White" Padding="20" Margin="20"/>
-                <Button Grid.Row="1" Text="Play Game"  Clicked="PlayGame" FontSize="25" TextColor="White" Padding="20" Margin="20" BorderColor="#000000"/>
-                <Button Grid.Row="2" Text="Sign Up"  Clicked="SignUpButton" FontSize="25" TextColor="White" Padding="20" Margin="20"/>
+                <!--<Button Grid.Row="1" Text="Play Game"  Clicked="PlayGame" FontSize="25" TextColor="White" Padding="20" Margin="20" BorderColor="#000000"/>-->
+                <Button Grid.Row="1" Text="Sign Up"  Clicked="SignUpButton" FontSize="25" TextColor="White" Padding="20" Margin="20"/>
             </Grid>
             
             
